JumpScript/tests/baselines/reference/useSharedArrayBuffer2.errors.txt
tests/cases/conformance/es2017/useSharedArrayBuffer2.jump(1,16): error TS2304: Cannot find name 'SharedArrayBuffer'.


==== tests/cases/conformance/es2017/useSharedArrayBuffer2.jump (1 errors) ====
    var foge = new SharedArrayBuffer(1024);
                   ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'SharedArrayBuffer'.
    var bar = foge.slice(1, 10);
    var len = foge.byteLength;